Add database management functionality and configure logging. Update .gitignore and pyproject.toml for project setup.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ target-version = "py38"
 
 [tool.ruff.lint]
 select = ["E", "F", "B", "I"]
-ignore = []
+ignore = ["E501"]
 
 [tool.ruff.lint.isort]
 known-first-party = ["fastapi_db"]
